# urte-os

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
docs/: .gitattributes  CNAME  URTE_Arcadia_Capella_SysML_Extension.tex  URTE_Architecture main with cit and formulas 3d cad.tex  URTE_Architecture main with cit and formulas.tex  URTE_Infrastructure_Model.tex  URTE_Investment_Prospectus.tex  URTE_Kernel_Threads_Hybrid_Parallel_Spec.tex  URTE_MBSE_Document.tex  URTE_POSIX_Kernel_Technical_Specification.tex  index.html
docs/assets/: tailwind.css
include/urte/: channel.h  guardrail.h  process.h  state_vector.h  syscalls.h  trl_pull.h  types.h
kernel-rs/: Cargo.toml  README.md
kernel-rs/examples/: rtos_flow.rs  run_pipeline.rs  sql_mesh.rs
kernel-rs/src/: actor.rs  channel.rs  error.rs  flow.rs  guardrail.rs  lib.rs  mesh.rs  parallel.rs  process.rs  rtos.rs  scheduler.rs  state_vector.rs  sync.rs  task.rs  trl_pull.rs  types.rs
kernel-rs/src/compiler/: ast.rs  ir.rs  lexer.rs  mod.rs  parser.rs
kernel-rs/src/interpreter/: mod.rs
kernel-rs/src/sql/: ast.rs  catalog.rs  engine.rs  lexer.rs  mod.rs  parser.rs
lib/: README.md
model/: schema.sql  urtecore.model.json
